collections & 26.1.2